--- a/tema6/tema6.html
+++ b/tema6/tema6.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>tema5</title>
-<link rel="stylesheet" style="text/css" href="tema6.css">
+<link rel="stylesheet" href="tema6.css">
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
