--- a/tema6/tema6.html
+++ b/tema6/tema6.html
@@ -4,6 +4,7 @@
 <title>tema5</title>
 <link rel="stylesheet" href="tema6.css">
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+<meta charset="UTF-8">
 </head>
 <body>
     <!--some tags with "class" selector-->
