--- a/tema6/tema6.html
+++ b/tema6/tema6.html
@@ -1,34 +1,64 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>tema5</title>
-<link rel="stylesheet" href="tema6.css">
-<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-<meta charset="UTF-8">
-</head>
-<body>
+  <head>
+    <title>tema5</title>
+    <link rel="stylesheet" href="tema6.css" />
+    <link
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      rel="stylesheet"
+    />
+    <meta charset="UTF-8" />
+    <meta name="author" content="Vasile Marchis" />
+    <meta http-equiv="refresh" content="20" />
+  </head>
+  <body>
     <!--some tags with "class" selector-->
-    <h2 class="class-selector">Acest header se va supune selectorului "class-selector"</h2>
+    <h2 class="class-selector">
+      Acest header se va supune selectorului "class-selector"
+    </h2>
     <div class="class-selector">
-        <p>acest paragraf va fi colorat ca si elemantul parinte "div"<br/>
-             pentru ca se supune selectorului class</p>
-        <p>La fel, acest paragraf are selectorul "class-selector"</p>
+      <p>
+        acest paragraf va fi colorat ca si elemantul parinte "div"<br />
+        pentru ca se supune selectorului class
+      </p>
+      <p>La fel, acest paragraf are selectorul "class-selector"</p>
     </div>
-    <h5 class="class-selector">Chiar daca nu este in "div", acest header va avea aceleasi proprietati</h5>
+    <h5 class="class-selector">
+      Chiar daca nu este in "div", acest header va avea aceleasi proprietati
+    </h5>
     <p class="class-selector">La fel si acest paragraf</p>
     <!--here are some tags with "id" selector-->
-    <h3 id="id-sel-1">Acest header va avea proprieteti unice </h3>
-    <p id="id-sel-2">Si acest paragraf va avea alte proprietati </p>
+    <h3 id="id-sel-1">Acest header va avea proprieteti unice</h3>
+    <p id="id-sel-2">Si acest paragraf va avea alte proprietati</p>
     <p id="id-sel-3">La fel, acest paragraf va fi "ca nimeni altul"</p>
     <!--iframe tag used along with icons-->
-    <iframe src="http://vasilemarchis.go.ro:8009/" height="500" width="700"></iframe>
+    <iframe
+      src="http://vasilemarchis.go.ro:8009/"
+      height="500"
+      width="700"
+    ></iframe>
     <section class="links">
-        <h2>Contact me via:</h2>
-        <ul>
-          <li><a href="https://twitter.com/#" title="Twitter" class="social-icon"><i class="fa fa-2x fa-twitter-square" aria-hidden="true"></i></a></li>
-          <li><a href="https://instagram.com/#" title="Instagram" class="social-icon"><i class="fa fa-2x fa-instagram" aria-hidden="true"></i></a></li>
-          <li><a href="https://behance.net/#" title="Behance" class="social-icon"><i class="fa fa-2x fa-behance-square" aria-hidden="true"></i></a></li>
-        </ul>
-      </section>
-</body>
+      <h2>Contact me via:</h2>
+      <ul>
+        <li>
+          <a href="https://twitter.com/#" title="Twitter" class="social-icon"
+            ><i class="fa fa-2x fa-twitter-square" aria-hidden="true"></i
+          ></a>
+        </li>
+        <li>
+          <a
+            href="https://instagram.com/#"
+            title="Instagram"
+            class="social-icon"
+            ><i class="fa fa-2x fa-instagram" aria-hidden="true"></i
+          ></a>
+        </li>
+        <li>
+          <a href="https://behance.net/#" title="Behance" class="social-icon"
+            ><i class="fa fa-2x fa-behance-square" aria-hidden="true"></i
+          ></a>
+        </li>
+      </ul>
+    </section>
+  </body>
 </html>
